--- a/survey/templates/_base.html
+++ b/survey/templates/_base.html
@@ -93,7 +93,7 @@
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						<div class="user-avatar">
-                            <img src="{% static 'assets/img/img-avatar.jpg'  %}">
+                            <img src="{% static 'assets/img/logo.png'  %}">
 						</div>
 						<span class="hidden-sm hidden-xs">Bikrant</span>
 					</a>
