--- a/survey/core/templates/core/dashboard.html
+++ b/survey/core/templates/core/dashboard.html
@@ -1,22 +1,26 @@
-{% extends 'base.html' %}
+{% extends '_base.html' %}
 
 {% block content %}
     {% for project in projects %}
+        <li>
+            <a href="{% url 'core:project_detail' project.pk %}" title="">
+                <img src="assets/img/Patanjali.gif" class="school-logo" alt="">
+                <h6>{{ project }}</h6>
+                <span>{{ project.address }}</span>
+            </a>
+        </li>
 
-    <a href="{% url 'core:project_detail' project.pk %}">{{ project }}</a>
         <a href="{% url 'core:project_update' project.pk %}">Edit</a>
         <a href="{% url 'core:project_delete' project.pk %}">Delete</a>
 
         <a href="{% url 'userrole:userrole_create' project.pk %}">Add Project Manager</a>
+{% endfor %}
+        <br>
 
     <br>
-
-{% endfor %}
-
-<br>
 
     <a href="{% url 'core:project_create' %}">Add Project</a><br>
     <a href="{% url 'core:user_create' %}">Create User</a></br>
 
-</p>
+    </p>
 {% endblock content %}
