--- a/survey/core/templates/core/dashboard.html
+++ b/survey/core/templates/core/dashboard.html
@@ -1,26 +1,111 @@
 {% extends '_base.html' %}
 
 {% block content %}
-    {% for project in projects %}
-        <li>
-            <a href="{% url 'core:project_detail' project.pk %}" title="">
-                <img src="assets/img/Patanjali.gif" class="school-logo" alt="">
-                <h6>{{ project }}</h6>
-                <span>{{ project.address }}</span>
-            </a>
-        </li>
 
-        <a href="{% url 'core:project_update' project.pk %}">Edit</a>
-        <a href="{% url 'core:project_delete' project.pk %}">Delete</a>
-
-        <a href="{% url 'userrole:userrole_create' project.pk %}">Add Project Manager</a>
-{% endfor %}
-        <br>
-
-    <br>
-
-    <a href="{% url 'core:project_create' %}">Add Project</a><br>
-    <a href="{% url 'core:user_create' %}">Create User</a></br>
-
-    </p>
+<div class="row no-gutters">
+            <div class="col-md-4 col-lg-3">
+                <div class="module-school-list">
+                    <div class="school-wrap">
+                        <ul class="school-list">
+                            {% for project in projects %}
+                            <li>
+                                <a href="{% url 'core:project_detail' project.pk %}" title="">
+                                    <img src="{{ MEDIA_URL }}{{ project.logo }}" class="project-logo" alt="">
+                                    <h6>{{ project }}</h6>
+                                    <span>{{ project.address }}</span>
+                                </a>
+                            </li>{% endfor %}
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            {% if latest_project %}
+            <div class="col-md-8 col-lg-9">
+                <div class="dash-right">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="widget-info margin-top-large">
+                                <div class="widget-head">
+                                    <h4><a href="#" title="">Project Info</a></h4>
+                                </div>
+                                <div class="widget-body">
+                                    <h5>Name</h5><br>
+                                     <p>
+                                         {{ latest_project.name }}
+                                     </p><br>
+                                    <h5>Organization</h5><br>
+                                     <p>
+                                         {{ latest_project.organization }}
+                                     </p><br>
+                                    <h5>Logo</h5><br>
+                                     <p>
+                                         <img src="{{ MEDIA_URL }}{{ latest_project.logo }}">
+                                     </p><br>
+                                    <h5>Type</h5><br>
+                                     <p>
+                                         {{ latest_project.address }}
+                                     </p><br>
+                                    <h5>Short Description</h5><br>
+                                     <p>
+                                         {{ latest_project.short_description }}
+                                     </p><br>
+                                    <h5>Phone</h5><br>
+                                     <p>
+                                         {{ latest_project.phone_number }}
+                                     </p><br>
+                                    <h5>Email Address</h5><br>
+                                     <p>
+                                         {{ latest_project.email_address }}
+                                     </p><br>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% elif project %}
+            <div class="col-md-8 col-lg-9">
+                <div class="dash-right">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="widget-info margin-top-large">
+                                <div class="widget-head">
+                                    <h4><a href="#" title="">Project Info</a></h4>
+                                </div>
+                                <div class="widget-body">
+                                    <h5>Name</h5><br>
+                                     <p>
+                                         {{ project.name }}
+                                     </p><br>
+                                    <h5>Organization</h5><br>
+                                     <p>
+                                         {{ project.organization }}
+                                     </p><br>
+                                    <h5>Logo</h5><br>
+                                     <p>
+                                         <img src="{{ MEDIA_URL }}{{ project.logo }}">
+                                     </p><br>
+                                    <h5>Type</h5><br>
+                                     <p>
+                                         {{ project.address }}
+                                     </p><br>
+                                    <h5>Short Description</h5><br>
+                                     <p>
+                                         {{ project.short_description }}
+                                     </p><br>
+                                    <h5>Phone</h5><br>
+                                     <p>
+                                         {{ project.phone_number }}
+                                     </p><br>
+                                    <h5>Email Address</h5><br>
+                                     <p>
+                                         {{ project.email_address }}
+                                     </p><br>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>{% endif %}
+        </div>
 {% endblock content %}
