--- a/survey/templates/_base.html
+++ b/survey/templates/_base.html
@@ -33,23 +33,23 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		    <ul class="navbar-nav mr-auto">
 		      	<li class="nav-item dropdown">
-		        	<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		        	<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 		          		<i class="la la-bars"></i>
 		        	</a>
-		        	<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+		        	<div class="dropdown-menu" aria-labelledby="navbarDropdown1">
 			          	<a class="dropdown-item" href="#">Dashboard</a>
-			          	<a class="dropdown-item" href="#">Projects</a>
-			          	<a class="dropdown-item" href="#">Sites</a>
+			          	<a class="dropdown-item" href="#">Materials</a>
+			          	<!--<a class="dropdown-item" href="#">Sites</a>-->
 		        	</div>
 		      	</li>
 		    </ul>
 	    	<ul class="navbar-nav ml-auto">
 		      	<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						<i class="la la-bell"></i>
 						<span class="badge badge-warning">4</span>
 					</a>
-					<div class="dropdown-menu large-dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+					<div class="dropdown-menu large-dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown2">
 						<div class="dropdown-header">Notifications (12) </div>
 						<div class="dropdown-item">
 							<div class="notification-item">
